tests/good/lexical/020-int-7.clap
val x = 0b000000000000000111

