tests/bad/lexical/008-int-2.clap
val x = 000000000000042#

